--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,1 @@
-<div class="containter">Oba angular</div>
-<i class="fa fa-pencil"></i>
-<i class="fas fa-house"></i>
+<router-outlet></router-outlet>
